fix: correct overflow style of the table wrapper element

--- a/fun-house-fe/src/app/workspace/search/search.component.scss
+++ b/fun-house-fe/src/app/workspace/search/search.component.scss
@@ -41,7 +41,7 @@ $main_search_width: 30%;
       width: 100% - $main_search_width;
       height: 100%;
       padding: 1rem;
-      overflow: scroll;
+      overflow-y: auto;
     }
   }
 }
